--- a/lib/mauve/notifiers/templates/email_subject.txt.erb
+++ b/lib/mauve/notifiers/templates/email_subject.txt.erb
@@ -1,1 +1,22 @@
-xmpp.txt.erb
+<%=alert.id %>: <%= alert.update_type.upcase %>: <% 
+case alert.update_type
+when "cleared"
+%><%= alert.cleared_at.to_s_relative %><% 
+when "acknowledged"
+%><%= alert.acknowledged_at.to_s_relative %> by <%= alert.acknowledged_by %> until <%= alert.will_unacknowledge_at.to_s_human %><% 
+else
+%><%= alert.raised_at.to_s_relative %><% 
+end 
+%>: <%= alert.subject %>: <%= alert.summary %><%
+if alert.source != alert.subject 
+%> -- from <%= alert.source %><%
+end 
+%>. <%=WebInterface.url_for(alert)%><%
+if defined? was_suppressed and defined? will_suppress
+  if was_suppressed and not will_suppress 
+%> (Normal service has resumed.)<%
+  elsif will_suppress and not was_suppressed
+%> (Further alerts suppressed until things calm down.)<%
+  end 
+end
+%>
