--- a/lib/mauve/notifiers/templates/xmpp.txt.erb
+++ b/lib/mauve/notifiers/templates/xmpp.txt.erb
@@ -1,4 +1,4 @@
-<%= alert.update_type.upcase %>: <% 
+<%=alert.id %>: <%= alert.update_type.upcase %>: <% 
 case alert.update_type
 when "cleared"
 %><%= alert.cleared_at.to_s_relative %><% 
@@ -12,10 +12,10 @@ if alert.source != alert.subject
 %> -- from <%= alert.source %><%
 end 
 %>. <%=WebInterface.url_for(alert)%><%
-if defined? was_suppressed and defined? is_suppressed
-  if was_suppressed and not is_suppressed 
+if defined? was_suppressed and defined? will_suppress
+  if was_suppressed and not will_suppress 
 %> (Normal service has resumed.)<%
-  elsif is_suppressed and not was_suppressed
+  elsif will_suppress and not was_suppressed
 %> (Further alerts suppressed until things calm down.)<%
   end 
 end
