--- a/lib/mauve/notifiers/templates/xmpp.html.erb
+++ b/lib/mauve/notifiers/templates/xmpp.html.erb
@@ -1,4 +1,4 @@
-  <html xmlns="http://jabber.org/protocol/xhtml-im"><body xmlns="OAhttp://www.w3.org/1999/xhtml">
+  <html xmlns="http://jabber.org/protocol/xhtml-im"><body xmlns="http://www.w3.org/1999/xhtml">
 <a href="<%=WebInterface.url_for(alert)%>"><%= alert.id%>: <%= alert.update_type.upcase %></a>: <% 
 case alert.update_type
 when "cleared"
@@ -8,7 +8,7 @@ when "acknowledged"
 else
 %><%= alert.raised_at.to_s_relative %><% 
 end 
-%>: <strong><%= alert.subject %>:</strong> <%= alert.summary %><%
+%>: <strong><%= alert.subject %></strong> <%= alert.summary %><%
 if alert.source != alert.subject 
 %> -- from <%= alert.source %><%
 end 
