--- a/lib/mauve/notifiers/templates/xmpp.txt.erb
+++ b/lib/mauve/notifiers/templates/xmpp.txt.erb
@@ -7,7 +7,7 @@ when "acknowledged"
 else
 %><%= alert.raised_at.to_s_relative %><% 
 end 
-%>: <%= alert.subject %>: <%= alert.summary %><%
+%>: <%= alert.subject %> <%= alert.summary %><%
 if alert.source != alert.subject 
 %> -- from <%= alert.source %><%
 end 
