Tidied up login authentication + tests (woo!)

--- a/views/login.haml
+++ b/views/login.haml
@@ -2,7 +2,7 @@
   %fieldset
     %legend Please log in
     %label{:for => "username"} Username
-    %input{:name => 'username', :type => 'text', :autocorrect => "off", :autocapitalize => "off"}/
+    %input{:name => 'username', :type => 'text', :autocorrect => "off", :autocapitalize => "off", :value => @username}/
     %br
     %label{:for => "password", :title => "This is either your Single Sign On password or a PIN."} Password / PIN
     %input{:name => 'password', :type => 'password'}/
