--- a/views/_alerts_table_alert_detail.haml
+++ b/views/_alerts_table_alert_detail.haml
@@ -7,6 +7,8 @@
       %address
         - if alert.raised? or alert.acknowledged?
           Raised at #{(alert.raised_at || Time.now).to_s_human} &bull;
+        - if alert.suppressed?
+          Notifications suppressed until #{alert.suppress_until.to_s_human} &bull;
         - if alert.acknowledged?
           Ack'd at #{alert.acknowledged_at.to_s_human} by #{alert.acknowledged_by} &bull;
         Source: #{alert.source} &bull;
