--- a/views/_alerts_table_alert_summary.haml
+++ b/views/_alerts_table_alert_summary.haml
@@ -10,5 +10,7 @@
     %a{ :id => ["a","detail", alert.id], | 
         :href => "/alert/#{alert.id}",   |
         :onclick => "fetchDetail('#{alert.id}'); return false;"} 
+    - if alert.suppressed?
+      (suppressed)
       Details &darr;
   %td= (alert.raised_at || alert.cleared_at || Time.now).to_s_relative
