--- a/views/_search_table_row.haml
+++ b/views/_search_table_row.haml
@@ -1,5 +1,5 @@
 - alert = search_table_row if defined? search_table_row
-- row_class = (row_class || []) + [ cycle(nil, "hilight"), alert.raised? && "triggered", alert.acknowledged? && "acknowledged", alert.level]
+- row_class = (row_class || []) + [ cycle(nil, "hilight"), alert.raised? && "raised", alert.acknowledged? && "acknowledged", alert.level]
 %tr{ :class => row_class, :id => ["tr", "summary", alert.id] }
   %td
     %input{ :type => "checkbox", :id => "alerts[#{alert.id}]", :name => "alerts[#{alert.id}]", :class => 'alert' }
