--- a/views/_alerts_table_group.haml
+++ b/views/_alerts_table_group.haml
@@ -1,10 +1,10 @@
 -# Sanity checking.
 - group, alerts = alerts_table_group unless alerts_table_group.nil?
 - if alerts.length <= 2
-  =partial("alerts_table_alert_summary", :collection => alerts)
+  =partial("search_table_row", :collection => alerts)
 - else
-  =partial("alerts_table_alert_summary", :collection => [alerts.first])
-  =partial("alerts_table_alert_summary", :collection => alerts[1..-1], :locals => {:row_class => ["hidden"]})
+  =partial("search_table_row", :collection => [alerts.first])
+  =partial("search_table_row", :collection => alerts[1..-1], :locals => {:row_class => ["hidden"]})
   %tr{:id => ["tr","group",group]}
     %td &nbsp;
     %td{:colspan => 2}
