--- a/lib/mauve/notifiers/templates/xmpp.html.erb
+++ b/lib/mauve/notifiers/templates/xmpp.html.erb
@@ -1,5 +1,5 @@
   <html xmlns="http://jabber.org/protocol/xhtml-im"><body xmlns="http://www.w3.org/1999/xhtml">
-<a href="<%=WebInterface.url_for(alert)%>"><%= alert.id%>: <%= alert.update_type.upcase %></a>: <% 
+<a href="<%=WebInterface.url_for(alert)%>"><%= alert.id%>: <%= alert.update_type.upcase %></a> <%= alert.level.to_s.capitalize %>: <% 
 case alert.update_type
 when "cleared"
 %><%= alert.cleared_at.to_s_relative %><% 
@@ -15,9 +15,9 @@ end
 %>.<%
 if defined? was_suppressed and defined? will_suppress
   if was_suppressed and not will_suppress 
-%><br /><em>Normal service has resumed.</em><%
+%><br /><em>Normal service for <%= alert.level %> alerts has resumed.</em><%
   elsif will_suppress and not was_suppressed
-%><br /><em>Further alerts suppressed until things calm down.</em><%
+%><br /><em>Further <%= alert.level %> alerts suppressed until things calm down.</em><%
   end
 end
 %></body></html>
