--- a/lib/mauve/notifiers/templates/xmpp.txt.erb
+++ b/lib/mauve/notifiers/templates/xmpp.txt.erb
@@ -1,4 +1,4 @@
-<%=alert.id %>: <%= alert.update_type.upcase %>: <% 
+<%=alert.id %>: <%= alert.update_type.upcase %> <%= alert.level.to_s.capitalize %>: <% 
 case alert.update_type
 when "cleared"
 %><%= alert.cleared_at.to_s_relative %><% 
@@ -14,9 +14,9 @@ end
 %>. <%=WebInterface.url_for(alert)%><%
 if defined? was_suppressed and defined? will_suppress
   if was_suppressed and not will_suppress 
-%> (Normal service has resumed.)<%
+%> (Normal service for <%= alert.level %> alerts has resumed.)<%
   elsif will_suppress and not was_suppressed
-%> (Further alerts suppressed until things calm down.)<%
+%> (Further <%= alert.level %> alerts suppressed until things calm down.)<%
   end 
 end
 %>
