Events tab to link to list instead of calendar, calendar takes too long to load

--- a/views/_navbar.haml
+++ b/views/_navbar.haml
@@ -16,7 +16,7 @@
       %li{:class => [ request.path_info =~ /^\/search/ && "nav_selected"]}
         %a{:href => '/search'} Search
       %li{:class => [ request.path_info =~ /^\/events/ && "nav_selected"]}
-        %a{:href => '/events/calendar'} Events
+        %a{:href => '/events/list'} Events
       %li
         %a{:href => '/logout'} Log out
   %br
